[FIXES #28163951] Ribbon on property details page is cut off on the right

--- a/app/assets/stylesheets/application.css.less
+++ b/app/assets/stylesheets/application.css.less
@@ -332,7 +332,7 @@ aside .section-header, .aside .section-header {
     } // header    
     
     .focal{
-      width: 180px;
+      width: 192px;
       height: 180px;
       background: transparent url(badge.png) no-repeat 0 0;
       padding: 5px 0px 10px;
